
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="abualgokh.itqan.com.abualgokh.fragment.ContactUsFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <include
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/toolbar"
        />


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView

                android:id="@+id/txtaddress"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_10sdp"
                android:text="@string/address_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


                <TextView

                    android:layout_weight="1"
                    android:id="@+id/txtdisplayaddress"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_11sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/mobile"
                android:textSize="@dimen/_11sdp"
                android:padding="@dimen/_5sdp"
                android:id="@+id/txtmobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:id="@+id/txtdisplaymobile"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_11sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/Email_Company"
                    android:textSize="@dimen/_11sdp"
                    android:padding="@dimen/_5sdp"
                    android:id="@+id/txtemail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:id="@+id/txtdisplayemail"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_11sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <Button
                android:id="@+id/btnlocation"
                android:padding="@dimen/_15sdp"
                android:text="@string/Location_Company"
                android:textStyle="bold"
                android:textSize="@dimen/_20sdp"
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/Your_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/txtyourname"
                android:layout_margin="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingLeft="@dimen/_15sdp"
                style="@style/Edittextstyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                />


            <TextView
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/Mobile_Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/txtyourmobile"
                android:layout_margin="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingLeft="@dimen/_15sdp"
                style="@style/Edittextstyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                />

            <TextView
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/Your_Message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/txtyourmessaage"
                android:layout_margin="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingLeft="@dimen/_15sdp"
                style="@style/Edittextstyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                />



            <TextView
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/Your_Feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText

                android:gravity="top"
                android:id="@+id/txtyourfeedback"
                android:layout_margin="@dimen/_5sdp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingLeft="@dimen/_25sdp"
                style="@style/Edittexttotextareastyle"
                android:inputType="text|textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                />

            <Button

                android:textSize="@dimen/_25sdp"
                android:textStyle="bold"
                android:text="@string/Send"
                android:gravity="center"
                android:textColor="@color/textbuttoncolorwhite"
                android:padding="@dimen/_15sdp"
                style="@style/ButtonStyle"
                android:layout_margin="@dimen/_30sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
